--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,20 @@
 server {
-  location / {
-    root /assets;
+        listen 80;
+        listen [::]:80;
+        server_name va-schoell.de;
+        return 301 https://$server_name$request_uri;
+}
 
-    try_files $uri $uri/index.html /index.html;
-  }
+server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name va-schoell.de;
+        root /usr/share/nginx/;
+        index index.html index.htm;
+
+        location / {
+          root /assets;
+
+          try_files $uri $uri/index.html /index.html;
+        }
 }
